seq2seq review 2

--- a/_notebooks/2020-07-31-Sequence-to-Sequence-Learning-with-Nueral-Networks.ipynb
+++ b/_notebooks/2020-07-31-Sequence-to-Sequence-Learning-with-Nueral-Networks.ipynb
@@ -149,8 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "![table1](images/seq2seq2.png)"
+    "![table1](images/seq2seq2.PNG)"
    ]
   },
   {
@@ -159,7 +158,7 @@
    "source": [
     "另外，作者还分析了编码器对于语序和语态的表现能力。从图中可以看出模型对于语序非常敏感，但是不能很好的区分主动语态和被动语态。\n",
     "\n",
-    "![figure2](images/seq2seq3.png)"
+    "![figure2](images/seq2seq3.PNG)"
    ]
   },
   {
@@ -174,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![figure3](images/seq2seq4.png)"
+    "![figure3](images/seq2seq4.PNG)"
    ]
   },
   {
