seq2seq review 3

--- a/_notebooks/2020-07-31-Sequence-to-Sequence-Learning-with-Nueral-Networks.ipynb
+++ b/_notebooks/2020-07-31-Sequence-to-Sequence-Learning-with-Nueral-Networks.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "这篇文章发表于2014年底。我们所熟知的seq2seq模型由该文章提出。本文提出了一种解决由一个序列预测另一个序列问题的端到端的模型（seq2seq模型）。通过在WMT'14数据集上的测试，证明了端到端的seq2seq模型可以达到SOAT的精度。\n",
+    "这篇文章发表于2014年底。我们所熟知的seq2seq模型由该文章提出。本文提出了一种解决由一个序列预测另一个序列问题的端到端的模型(seq2seq模型)。通过在WMT'14数据集上的测试，证明了端到端的seq2seq模型可以达到SOAT的精度。\n",
     "\n",
     "接下来我们主要介绍以下几点：\n",
     "\n",
@@ -197,6 +197,13 @@
     "{{ '[Sequence to Sequence Learning with Neural Networks](https://papers.nips.cc/paper/5346-sequence-to-sequence-learning-with-neural-networks.pdf)' | fndetail: 1 }}\n",
     "{{ '[自然语言处理——BLEU详解以及简单的代码实现](https://blog.csdn.net/allocator/article/details/79657792)' | fndetail: 2 }}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
