--- a/_notebooks/2020-07-31-Sequence-to-Sequence-Learning-with-Nueral-Networks.ipynb
+++ b/_notebooks/2020-07-31-Sequence-to-Sequence-Learning-with-Nueral-Networks.ipynb
@@ -8,7 +8,7 @@
     "> Sequenc to Sequence Learning with Nueral Networks review\n",
     "\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
     "- author: Bujie Xu\n",
     "- categories: [NLP]"
